--- a/Day 20/Homework/task1.html
+++ b/Day 20/Homework/task1.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olympics</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="task1.css">
 </head>
 <body>
 
@@ -38,6 +38,7 @@
         <img src="voll3.jpg" width="650">
 </div> 
 
+
 <div>
     <hr>
     <br>
@@ -65,13 +66,13 @@
 <div>
     <h3>What are the rules of indoor and beach volleyball?</h3>
     <p>Here are a few things you need to know to ensure you don’t violate any rules or give the other team a point. You must not:</p>
-    <ul>
+    <ol class="center">
         <li>Step on or over the end line when taking a serve</li>
         <li>Hit or serve the ball into the net</li>
         <li>Touch the net while the ball is in play</li>
         <li>Reach over the net to get the ball. You may reach over to execute a follow-through or block a returning ball</li>
         <li>Reach under the net</li>
-    </ul>
+    </ol>
 </div>
 
 </body>
